--- a/client/client/scripts/pages/groups.html
+++ b/client/client/scripts/pages/groups.html
@@ -8,7 +8,7 @@
     <a class="btn btn-default pull-right" href="#/group-create"><i class="glyphicon glyphicon-plus"></i> New Group</a>
   </div>
 
-  <table class="table table-condensed">
+  <table class="table table-condensed table-striped">
     <thead>
       <tr>
         <th><!-- icons --></th>
