--- a/client/client/scripts/pages/users.html
+++ b/client/client/scripts/pages/users.html
@@ -8,7 +8,7 @@
     <a class="btn btn-default pull-right" href="#/user-create"><i class="glyphicon glyphicon-plus"></i> New User</a>
   </div>
 
-  <table class="table table-condensed">
+  <table class="table table-condensed table-striped">
     <thead>
       <tr>
         <th><!-- pictures --></th>
