--- a/client/client/scripts/index.html
+++ b/client/client/scripts/index.html
@@ -159,8 +159,12 @@
     <!-- content -->
     <div class="ctn-main">
       <div class="ctn-wrapper">
-        <div cam-breadcrumbs-panel divider="&raquo;" class="breadcrumbs-panel"></div>
-        <div notifications-panel class="notifications-panel"></div>
+        <div cam-breadcrumbs-panel
+             divider="&raquo;"
+             class="breadcrumbs-panel"></div>
+
+        <div notifications-panel
+             class="notifications-panel"></div>
 
         <!-- view body provided by ngView -->
         <div ng-view></div>
