--- a/client/client/scripts/pages/userCreate.html
+++ b/client/client/scripts/pages/userCreate.html
@@ -7,65 +7,143 @@
       </div>
     </div>
     <div class="row">
-      <form class="form-horizontal" name="createUserForm">
+      <form class="form-horizontal"
+            name="createUserForm">
 
         <legend>User Account</legend>
 
         <div class="form-group">
-          <label class="control-label" for="inputUserId">User id*</label>
-          <div class="controls">
-            <input id="inputUserId" name="userId" type="text" ng-model="profile.id" novalidate required></input>
-            <span class="help-inline" ng-show="createUserForm.userId.$error.required">User id is required.</span>
+          <label class="control-label col-sm-4"
+                 for="inputUserId">User id*</label>
+
+          <div class="col-sm-8">
+            <input id="inputUserId"
+                   name="userId"
+                   class="form-control"
+                   type="text"
+                   ng-model="profile.id"
+                   novalidate
+                   required />
+
+            <span class="help-inline"
+                  ng-show="createUserForm.userId.$error.required">
+              User id is required.
+            </span>
           </div>
         </div>
 
         <div class="form-group">
-          <label class="control-label" for="inputPassword">Password*:</label>
-          <div class="controls">
-            <input id="inputPassword" name="inputPassword" type="password" ng-model="credentials.password" data-password required></input>
-            <span class="help-inline" ng-show="createUserForm.inputPassword.$error.password">Password must have at least 8 characters.</span>
-            <span class="help-inline" ng-show="createUserForm.inputPassword.$error.required">Password is required.</span>
+          <label class="control-label col-sm-4"
+                 for="inputPassword">Password*:</label>
+
+          <div class="col-sm-8">
+            <input id="inputPassword"
+                name="inputPassword"
+                class="form-control"
+                type="password"
+                ng-model="credentials.password"
+                data-password required />
+
+            <span class="help-inline"
+                  ng-show="createUserForm.inputPassword.$error.password">
+              Password must have at least 8 characters.
+            </span>
+
+            <span class="help-inline"
+                  ng-show="createUserForm.inputPassword.$error.required">
+              Password is required.
+            </span>
           </div>
         </div>
 
         <div class="form-group">
-          <label class="control-label" for="inputPasswordRepeat">Password (repeat)*:</label>
-          <div class="controls">
-            <input id="inputPasswordRepeat" name="inputPasswordRepeat" type="password" ng-model="credentials.password2" data-password-repeat="credentials.password"></input>
-            <span class="help-inline" ng-show="createUserForm.inputPasswordRepeat.$error.passwordRepeat">Passwords must match.</span>
+          <label class="control-label col-sm-4"
+                 for="inputPasswordRepeat">Password (repeat)*:</label>
+
+          <div class="col-sm-8">
+            <input id="inputPasswordRepeat"
+                   name="inputPasswordRepeat"
+                   class="form-control"
+                   type="password"
+                   ng-model="credentials.password2"
+                   data-password-repeat="credentials.password" />
+
+            <span class="help-inline"
+                  ng-show="createUserForm.inputPasswordRepeat.$error.passwordRepeat">
+              Passwords must match.
+            </span>
           </div>
         </div>
 
         <legend>User Profile</legend>
 
         <div class="form-group">
-          <label class="control-label" for="inputFirstname">Firstname*</label>
-          <div class="controls">
-            <input id="inputFirstname" name="firstname" type="text" ng-model="profile.firstName" novalidate required></input>
-            <span class="help-inline" ng-show="createUserForm.firstname.$error.required">Firstname is required.</span>
+          <label class="control-label col-sm-4"
+                 for="inputFirstname">Firstname*</label>
+
+          <div class="col-sm-8">
+            <input id="inputFirstname"
+                   name="firstname"
+                   class="form-control"
+                   type="text"
+                   ng-model="profile.firstName"
+                   novalidate
+                   required />
+
+            <span class="help-inline"
+                  ng-show="createUserForm.firstname.$error.required">
+              Firstname is required.
+            </span>
           </div>
         </div>
 
         <div class="form-group">
-          <label class="control-label" for="inputLastname">Lastname*</label>
-          <div class="controls">
-            <input id="inputLastname" type="text" ng-model="profile.lastName" novalidate required></input>
-            <span class="help-inline" ng-show="createUserForm.firstname.$error.required">Lastname is required.</span>
+          <label class="control-label col-sm-4"
+                 for="inputLastname">Lastname*</label>
+
+          <div class="col-sm-8">
+            <input id="inputLastname"
+                   class="form-control"
+                   type="text"
+                   ng-model="profile.lastName"
+                   novalidate
+                   required />
+
+            <span class="help-inline"
+                  ng-show="createUserForm.firstname.$error.required">
+              Lastname is required.
+            </span>
           </div>
         </div>
 
         <div class="form-group">
-          <label class="control-label" for="inputEmail">Email</label>
-          <div class="controls">
-            <input id="inputEmail" name="email" type="text" ng-model="profile.email" data-email></input>
-            <span class="help-inline" ng-show="createUserForm.email.$error.email">Not a valid email address</span>
+          <label class="control-label col-sm-4"
+              for="inputEmail">Email</label>
+
+          <div class="col-sm-8">
+            <input id="inputEmail"
+                   name="email"
+                   class="form-control"
+                   type="text"
+                   ng-model="profile.email"
+                   data-email />
+
+            <span class="help-inline"
+                  ng-show="createUserForm.email.$error.email">
+              Not a valid email address.
+            </span>
           </div>
         </div>
 
         <div class="form-group">
-          <div class="controls">
-            <a class="btn" href="#/users">Cancel</a>
-            <button type="submit" class="btn btn-primary"  data-ng-disabled="!createUserForm.$valid" data-ng-click="createUser()">Create new User</button>
+          <div class="col-sm-8 col-sm-offset-4">
+            <a class="btn"
+               href="#/users">Cancel</a>
+
+            <button type="submit"
+                    class="btn btn-primary"
+                    data-ng-disabled="!createUserForm.$valid"
+                    data-ng-click="createUser()">Create new User</button>
           </div>
         </div>
 
