feat(plugin): provide plugin infrastructure
related to CAM-3298

--- a/client/client/index.html
+++ b/client/client/index.html
@@ -76,6 +76,11 @@
     var tasklistConf = {};
   </script>
 
+  <script type="text/javascript">
+    window.PLUGIN_DEPENDENCIES = $PLUGIN_DEPENDENCIES || [];
+    window.PLUGIN_PACKAGES = $PLUGIN_PACKAGES || [];
+  </script>
+
   <script type="text/javascript" src="$APP_ROOT/app/tasklist/scripts/config.js"></script>
   <script type="text/javascript"
           src="$APP_ROOT/app/tasklist/scripts/deps.js"
